facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_struct_vs_value_object_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│OwnedUser {         │
│  name: "Alice",    │
│  age: 30,          │
│}                   │
╰────────────────────╯
╭After───────────────╮
│{                   │
│  name: "Alice",    │
│  age: 30,          │
│}                   │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
