facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_struct_with_vec_field.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────────╮
│Container {                 │
│  items: Vec<i32> [1, 2, 3],│
│}                           │
╰────────────────────────────╯
╭After───────────────────────╮
│Container {                 │
│  items: Vec<i32> [1, 2, 4],│
│}                           │
╰────────────────────────────╯
╔Diff════════════════════════╗
║{                           ║
║    items: [                ║
║        .. 2 unchanged items║
║        3 → 4               ║
║    ]                       ║
║}                           ║
╚════════════════════════════╝
