facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_structs_all_fields_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────╮
│User {                     │
│  name: "Alice",           │
│  age: 30,                 │
│}                          │
╰───────────────────────────╯
╭After──────────────────────╮
│User {                     │
│  name: "Bob",             │
│  age: 25,                 │
│}                          │
╰───────────────────────────╯
╔Diff═══════════════════════╗
║{                          ║
║    age: 30 → 25           ║
║    name: "Alice" → "Bob"  ║
║}                          ║
╚═══════════════════════════╝
