facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_structs_nested.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────────────────────╮
│UserWithAddress {                              │
│  name: "Alice",                               │
│  age: 30,                                     │
│  address: Address {                           │
│    street: "123 Main St",                     │
│    city: "Wonderland",                        │
│  },                                           │
│}                                              │
╰───────────────────────────────────────────────╯
╭After──────────────────────────────────────────╮
│UserWithAddress {                              │
│  name: "Alice",                               │
│  age: 30,                                     │
│  address: Address {                           │
│    street: "456 Oak Ave",                     │
│    city: "Wonderland",                        │
│  },                                           │
│}                                              │
╰───────────────────────────────────────────────╯
╔Diff═══════════════════════════════════════════╗
║{                                              ║
║    .. 2 unchanged fields                      ║
║    address: {                                 ║
║        .. 1 unchanged field                   ║
║        street: "123 Main St" → "456 Oak Ave"  ║
║    }                                          ║
║}                                              ║
╚═══════════════════════════════════════════════╝
