facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_structs_nested_multiple_changes.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────────────────────╮
│UserWithAddress {                              │
│  name: "Alice",                               │
│  age: 30,                                     │
│  address: Address {                           │
│    street: "123 Main St",                     │
│    city: "Wonderland",                        │
│  },                                           │
│}                                              │
╰───────────────────────────────────────────────╯
╭After──────────────────────────────────────────╮
│UserWithAddress {                              │
│  name: "Bob",                                 │
│  age: 25,                                     │
│  address: Address {                           │
│    street: "456 Oak Ave",                     │
│    city: "Elsewhere",                         │
│  },                                           │
│}                                              │
╰───────────────────────────────────────────────╯
╔Diff═══════════════════════════════════════════╗
║{                                              ║
║    address: {                                 ║
║        city: "Wonderland" → "Elsewhere"       ║
║        street: "123 Main St" → "456 Oak Ave"  ║
║    }                                          ║
║    age: 30 → 25                               ║
║    name: "Alice" → "Bob"                      ║
║}                                              ║
╚═══════════════════════════════════════════════╝
