facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_structs_one_field_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────╮
│User {                     │
│  name: "Alice",           │
│  age: 30,                 │
│}                          │
╰───────────────────────────╯
╭After──────────────────────╮
│User {                     │
│  name: "Bob",             │
│  age: 30,                 │
│}                          │
╰───────────────────────────╯
╔Diff═══════════════════════╗
║{                          ║
║    .. 1 unchanged field   ║
║    name: "Alice" → "Bob"  ║
║}                          ║
╚═══════════════════════════╝
