facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_tuples_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│(i32, i32, i32) (   │
│  1,                │
│  2,                │
│  3,                │
│)                   │
╰────────────────────╯
╭After───────────────╮
│(i32, i32, i32) (   │
│  1,                │
│  2,                │
│  3,                │
│)                   │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
