facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_tuples_nested_different_sizes.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────╮
│((i32, i32), (i32, i32)) (     │
│  (i32, i32) (                 │
│    1,                         │
│    2,                         │
│  ),                           │
│  (i32, i32) (                 │
│    3,                         │
│    4,                         │
│  ),                           │
│)                              │
╰───────────────────────────────╯
╭After──────────────────────────╮
│((i32, i32, i32), (i32, i32)) (│
│  (i32, i32, i32) (            │
│    1,                         │
│    2,                         │
│    3,                         │
│  ),                           │
│  (i32, i32) (                 │
│    4,                         │
│    5,                         │
│  ),                           │
│)                              │
╰───────────────────────────────╯
╔Diff═══════════════════════════╗
║- (i32, i32) (                 ║
║  1,                           ║
║  2,                           ║
║)                              ║
║- (i32, i32) (                 ║
║  3,                           ║
║  4,                           ║
║)                              ║
║+ (i32, i32, i32) (            ║
║  1,                           ║
║  2,                           ║
║  3,                           ║
║)                              ║
║+ (i32, i32) (                 ║
║  4,                           ║
║  5,                           ║
║)                              ║
╚═══════════════════════════════╝
